--- a/final/final.Rmd
+++ b/final/final.Rmd
@@ -34,7 +34,7 @@ knitr::opts_chunk$set(cache = FALSE, echo = TRUE, message = FALSE, warning = FAL
 <!-- ======================================================================= -->
 <!-- ============================== NOTLAR ================================= -->
 <!-- ======================================================================= -->
-[^1]: Öğrenci Numarası, [Github Repo](https://github.com/KULLANICI_ADINIZ/REPO_ADINIZ)
+[^1]: 21080548, [Github Repo](https://github.com/hakanburakgunyel/Final.git)
 
 # Final Hakkında Önemli Bilgiler
 
