--- a/final/final.Rmd
+++ b/final/final.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Çalışmanızın Başlığı"
+title: "Beklenen İstanbul Depremi Üzerine Bir Araştırma"
 author: 
   - Hakan Burak Günyel[^1]
 bibliography: ../bibliography/biblio.bib
@@ -66,26 +66,10 @@ içinde tablo ve grafiklerin bulunduğu istatiksel bir analiz yapmaktır.
 
 ## Literatür 
 
-Depremler Dünyada kırık hatlar boyunca biriken enerjinin ani bir şekilde boşalması sonucu
-oluşan doğal afetlerdir. Dünya genelinde yılda 500.00 deprem olur ve bunların 100 ü binalara hasar verecek kadar güçlüdür. 17 Ağustos 1999 depreminden sonra yapılan araştırmalar
-Marmara Denizinde hala kırılmayan faylar olduğunu gösterir. Tom Parsons’ ın 2000 yılında
-yaptığı bir çalışma beklenen depremin 2000 ila 2030 yılları arasında olacağını gösterir. İstanbul,tarihi, coğrafyası, sosyal ve kültürel yönü bakımından oldukça zengin bir şehirdir. Büyük
-bir depremi yaşaması durumunda sadece Türkiye için değil, dünya birikimi açısından büyük
-bir kayıp yaşanır.(ŞİMŞEK ve GÜNDÜZ, 2021) Türkiye deprem kuşağında olmasına rağmen
-olası depremin yaratacağı hasara karşı hazırlıksızdır. Şehirlerimizde hızlı ve yoğun kentleşme
-beraberinde plansız yapılaşmayı beraberinde getirir. Bu da kayıpların önünü açacaktır. Marmara bölgesi tarihimizde büyük yıkıcı depremlerle karşılaşmıştır. Yapılan çalışmalar büyük
-bir depremin tekrar yaşanacağını öngörmektedir. Böyle bir duruma hazırlıklı olmayan İstanbul’ da ciddi sayılarda can ve mal kaybının yaşanacağı tahmin edilmektedir. (Uyar ve Evrim,
-2023) Deprem tehlikesi, arazi kullanımı, demografik yapı ve ekonomik yapı depremin riskini
-etkileyen temel faktörlerdir. Depremin tehlikesini başta depremin büyüklüğü belirler. Konut alanlarındaki yoğunluk, nüfusun büyüklüğüyle doğru orantılıdır. Doğal afetler açısından
-bakıldığında en çok hasar yerler konut alanlarıdır. Konut alanlarının yapısal özelliklerinin
-belirlenmesi hasar tahmini yapmaya kolaylık sağlar. İstanbul’da depreme bağlı risk düzeylerini belirleyen ana bileşenler belirlenmiştir. Bu bağlamda hasar görebilirlik (mahallenin yaşı,
-yapı stoğu ve demografik yapısı incelenir), yoğunluk (mahalledeki yapı ve nüfus yoğunluğu incelenir), işyeri ve yanıcı/patlayıcı kullanımlar, tehlike (depremin yaratacağı ivme tepki
-spektrum değeri), ve potansiyeller (mahalledeki sağlık tesisi ve hasta yatak sayısı) incelenir.
-Sonuç olarak kentsel arazi kullanımı beraberinde nüfus yoğunluğunu getirir ve bahsedilen ana
-bileşenlerle birlikte depreme bağlı riski artırır. (KUNDAK ve TÜRKOĞLU, 2010) Deprem
-riskine karşı insanlara farkındalık eğitimi verilmeli; kentsel dönüşüm ve altyapı çalışmaları yapılarak önlemler alınmalıdır. Depremle ilgili gerekli kanuni önlemler alınmalı, zorunlu
-deprem sigortası vatandaşlara yaptırılmalıdır. Türkiye’nin en önemli sanayi ve finans merkezi olan İstanbul’da yıkıcı bir depremin meydana gelmesi ekonomi ve endüstri faaliyetlerini
-durma noktasına getirebilir. (Erdik ve Durukal, 2008)
+Depremler Dünyada kırık hatlar boyunca biriken enerjinin ani bir şekilde boşalması sonucu oluşan doğal afetlerdir. Dünya genelinde yılda 500.00 deprem olur ve bunların 100 ü binalara hasar verecek kadar güçlüdür. 17 Ağustos 1999 depreminden sonra yapılan araştırmalar Marmara Denizinde hala kırılmayan faylar olduğunu gösterir. Tom Parsons’ ın 2000 yılında yaptığı bir çalışma beklenen depremin 2000 ila 2030 yılları arasında olacağını gösterir. İstanbul,tarihi, coğrafyası, sosyal ve kültürel yönü bakımından oldukça zengin bir şehirdir. Büyük bir depremi yaşaması durumunda sadece Türkiye için değil, dünya birikimi açısından büyük bir kayıp yaşanır.[@csimcsek2021big]
+Türkiye deprem kuşağında olmasına rağmen olası depremin yaratacağı hasara karşı hazırlıksızdır. Şehirlerimizde hızlı ve yoğun kentleşme beraberinde plansız yapılaşmayı beraberinde getirir.  Bu da kayıpların önünü açacaktır. Marmara bölgesi tarihimizde büyük yıkıcı depremlerle karşılaşmıştır. Yapılan çalışmalar büyük bir depremin tekrar yaşanacağını öngörmektedir. Böyle bir duruma hazırlıklı olmayan İstanbul’ da ciddi sayılarda can ve mal kaybının yaşanacağı tahmin edilmektedir. [@uyar2023deprem]
+Deprem tehlikesi, arazi kullanımı, demografik yapı ve ekonomik yapı depremin riskini etkileyen temel faktörlerdir.  Depremin tehlikesini başta depremin büyüklüğü belirler. Konut alanlarındaki yoğunluk, nüfusun büyüklüğüyle doğru orantılıdır. Doğal afetler açısından bakıldığında en çok hasar yerler konut alanlarıdır. Konut alanlarının yapısal özelliklerinin belirlenmesi hasar tahmini yapmaya kolaylık sağlar. İstanbul’da depreme bağlı risk düzeylerini belirleyen ana bileşenler belirlenmiştir. Bu bağlamda hasar görebilirlik (mahallenin yaşı, yapı stoğu ve demografik yapısı incelenir), yoğunluk (mahalledeki yapı ve nüfus yoğunluğu incelenir), işyeri ve yanıcı/patlayıcı kullanımlar, tehlike (depremin yaratacağı ivme tepki spektrum değeri), ve potansiyeller (mahalledeki sağlık tesisi ve hasta yatak sayısı) incelenir. Sonuç olarak kentsel arazi kullanımı beraberinde nüfus yoğunluğunu getirir ve bahsedilen ana bileşenlerle birlikte depreme bağlı riski artırır. [@kundak2010istanbul]
+Deprem riskine karşı insanlara farkındalık eğitimi verilmeli; kentsel dönüşüm ve altyapı çalışmaları yapılarak önlemler alınmalıdır. Depremle ilgili gerekli kanuni önlemler alınmalı, zorunlu deprem sigortası vatandaşlara yaptırılmalıdır. Türkiye’nin en önemli sanayi ve finans merkezi olan İstanbul’da yıkıcı bir depremin meydana gelmesi ekonomi ve endüstri faaliyetlerini durma noktasına getirebilir. [@erdik2008earthquake]
 
 # Veri 
 Bu bölümde çalışmanızda kullandığınız veri setinin kaynağını, ham veri üzerinde herhangi bir işlem yaptıysanız bu işlemleri ve veri seti ile ilgili özet istatistikleri tartışınız. Bu bölümde tüm değişkenlere ait özet istatistikleri (ortalama, standart sapma, minimum, maksimum, vb. değerleri) içeren bir tablo (Tablo \ref{tab:ozet}) olması zorunludur. Tablolarınıza gerekli göndermeleri bir önceki cümlede gösterildiği gibi yapınız. [@perkins:1991]
